<resources>
    <string name="app_name">SpotifyClone</string>
    <string name="not_working">Not Working</string>
    <string name="jump_back_in">Jump back in</string>
    <string name="episodes_for_you">Episodes for you</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="good_evening">Good evening</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
</resources>