<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/good_evening_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/good_evening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/good_evening"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_settings" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toLeftOf="@id/settings"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_notification" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/multiple_music_choices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@+id/good_evening_layout">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/liked_songs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:backgroundTint="@color/button"
                        android:drawableLeft="@drawable/ic_favorite"
                        android:text="@string/liked_songs"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:backgroundTint="@color/button"
                        android:drawableLeft="@drawable/ic_demo"
                        android:text="@string/not_working"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:backgroundTint="@color/button"
                        android:drawableLeft="@drawable/ic_demo"
                        android:text="@string/not_working"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:backgroundTint="@color/button"
                        android:drawableLeft="@drawable/ic_demo"
                        android:text="@string/not_working"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:backgroundTint="@color/button"
                        android:drawableLeft="@drawable/ic_demo"
                        android:text="@string/not_working"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:backgroundTint="@color/button"
                        android:drawableLeft="@drawable/ic_demo"
                        android:text="@string/not_working"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/episodes_for_you"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/multiple_music_choices" />

            <LinearLayout
                android:id="@+id/episodes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/episodes">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/eminem"
                    android:text="@string/not_working"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/khalid"
                    android:text="@string/not_working"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/jump_back_in"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/episodes_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/hans_zim"
                    android:text="@string/not_working"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/hans"
                    android:text="@string/not_working"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/home_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/button_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>